Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
     - http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: flask-app-service
               port:
                 number: 80
